# Backend-Rural-Tech

./: README.md  db_init.py  pyproject.toml  requirements.txt  rural_tech_local.db
src/: config.py  database.py  main.py
src/auth/: dependencies.py
src/components/: controllers.py
src/models/: db_models.py
src/repositories/: repositories.py
src/schemas/: schemas.py
src/services/: services.py
