[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.32",
    "aiofiles>=25.1.0",
]

